--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 					<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 						<div class="navbar-nav">
 							<a class="nav-item nav-link active" href="#" style="color: white">Home <span class="sr-only">(current)</span></a>
-							<a class="nav-item nav-link active" href="#" style="color: white">Features</a>
 						</div>
 					</div>
 			</nav>
@@ -28,7 +27,7 @@
 			<div class="jumbotron jumbotron-fluid">
 					<div class="container">
 						<h1 class="display-4">Benvenuto!👋</h1>
-						<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quasi recusandae tempora nesciunt officiis rem magni sapiente? Hic exercitationem fuga, explicabo numquam voluptate sequi harum error doloribus id iure placeat.</p>
+						<p class="lead">Ciao! Vuoi sapere dove il film che cerchi costa meno? Benissimo! Sceglilo dalla lista qui sotto oppure usa la barra di ricerca per cercare nella pagina</p>
 					</div>
 				</div>
 			<!--fine jumbotron-->
@@ -45,48 +44,12 @@
 			<!--album-->
 			<div class="album py-5">
 				<div class="container">
-				  <div class="row">
-					<div class="col-md-4">
-					  <div class="card mb-4 box-shadow">
-						<div class="card-body">
-						  <p class="card-text c1">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-						  <div class="d-flex justify-content-between align-items-center">
-							<div class="btn-group">
-							</div>
-						  </div>
-						</div>
-					  </div>
+				  	<div class="row append-here">
+					
 					</div>
-
-					<div class="col-md-4">
-					  <div class="card mb-4 box-shadow">
-						<div class="card-body">
-						  <p class="card-text c2">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-						  <div class="d-flex justify-content-between align-items-center">
-							<div class="btn-group">
-							</div>
-						  </div>
-						</div>
-					  </div>
-					</div>
-
-					<div class="col-md-4">
-					  <div class="card mb-4 box-shadow">	 
-						<div class="card-body">
-						  <p class="card-text c3">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-						  <div class="d-flex justify-content-between align-items-center">
-							<div class="btn-group">
-							</div>
-						  </div>
-						</div>
-					  </div>
-					</div>
-				  </div>
 				</div>
-			  </div>
-			
-
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+			</div>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="./scripts/index.js"></script>
